--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						       </div>
 			   </div>
 			   <div class = "section rows" >
-			      <h2>Langues parlées</h2>
+			      <h2>Informatique</h2>
 				  <div id="sys" class="row">
 				        <div class ="col-xs-2">
 					             <p><strong>Systèmes OS :</strong>:</p>
