--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	  
 	      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	        <meta charset="utf-8">
+	       <script language="javascript" type="text/javascript">
+  function afficher(id_div) {
+  $(id_div).toggle();
+  }
+  </script>
 			 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
       <link rel="stylesheet" href="style.css"/>
 	        <title> CV MAMADOU LAMINE KA</title>
