--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
       <head>
 	  
 	      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	      <script src="cv.js"></script>
 	        <meta charset="utf-8">
 	       <script language="javascript" type="text/javascript">
   function afficher(id_div) {
   $(id_div).toggle();
   }
+
   </script>
 			 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
       <link rel="stylesheet" href="style.css"/>
@@ -255,7 +257,8 @@
 					      <p> Voyages  :</p>
 						  </div>
 							  <button style="font-size: 50%;" onclick="afficher('#yea');">cacher</button>
-						  <div id="yea" class ="col-xs-10">
+						  <button style="font-size: 50%;" onclick="surligner('#yea');">surligner</button>
+							  <div id="yea" class ="col-xs-10">
 						  <p> Senegal, France, Pays-Bas, Luxembourg, Belgique, Suisse, Espagne, Portugal </p>
 						  </div>
 						  </div>
